--- a/css/index/style.css
+++ b/css/index/style.css
@@ -1838,3 +1838,69 @@ header nav ul li#right-menu #store::before {
 .story.video {
     width: 520px;
 }
+.searchResults{
+display: block;
+width: 100%;
+padding-top: 46px;
+height: 100vh;
+box-sizing: border-box;
+position: absolute;
+z-index: 200;
+top: 0}
+.searchResults.hidden{
+display: none !important}
+.searchResults > div{
+width: 100%;
+height: 100%;
+background: #fff}
+.searchResults .result{
+position: relative;
+padding: 13px;
+border-bottom: 3px solid #ccc}
+.searchResults .result .profilePic{
+display: inline-block; 
+padding-right: 23px}
+.searchResults .result .profilePic img{
+height: 96px;
+border-radius: 50%;
+position: absolute;
+left: 18px;
+top: 18px}
+.searchResults .result .username{
+display: inline-block;
+height: 111px;
+position: absolute;
+line-height: 111px;
+padding-left: 23px;
+border-left: 1px solid #ccc}
+.searchResults .result .username .rol{
+display: inline-block;
+padding: 9px 9px;
+color: #FFFFFF;
+font-size: 20px;
+background: #2ECC71;
+height: 27px;
+line-height: 27px;
+margin-left: 11px}
+.searchResults .result .username .rol b{
+color: #fff}
+.searchResults .result .resulttype{
+height: 111px;
+line-height: 111px;
+font-size: 23px;
+display: inline-block;
+text-align: right;
+float: right;
+padding-left: 23px}
+.searchResults .result .resulttype::before{
+content: "| ";
+color: #ccc;
+font-size: 31px;
+font-weight: normal}
+.searchResults .result > a:first-child{
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+z-index: 2}
