--- a/css/index/style.css
+++ b/css/index/style.css
@@ -1844,7 +1844,7 @@ width: 100%;
 padding-top: 46px;
 height: 100vh;
 box-sizing: border-box;
-position: absolute;
+position: fixed;
 z-index: 200;
 top: 0}
 .searchResults.hidden{
